<resources>
    <string name="app_name">TicTocToe</string>
    <string name="action_ok">OK</string>
    <string name="dialog_title_error">Error</string>
    <string name="app_title">Jogo da Velha</string>
    <string name="image_logo_description">Logo</string>
    <string name="text_copyright">Copyright © Jackson Severino da Rocha</string>
    <string name="input_text_player_name">Nome de Jogador</string>
    <string name="text_button_add_player">Cadastrar</string>
    <string name="describe_button_add_new_player">Adcionar Novo Jogador</string>
    <string name="describe_button_about">Sobre Jogo da Velha</string>
    <string name="text_button_about">Sobre</string>
    <string name="describe_cancel_select_player">Cancelar seleção de jogador</string>
    <string name="text_button_cancel">Cancelar</string>
    <string name="list_view_player_name">Player Name</string>
    <string name="describe_button_delete_player">Deletar Jogador</string>
    <string name="describe_button_select_player">Selecione Jogador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_level_easy">Fácil</string>
    <string name="text_view_medium">Médio</string>
    <string name="text_view_hard">Difícil</string>
    <string name="text_view_exit">Sair</string>
    <string name="describe_level_easy">Nível Fácil</string>
    <string name="describe_button_medium">Nível Médio</string>
    <string name="describe_level_hard">Nǘel Difícil</string>
    <string name="describe_button_exit">Sair do Jogo</string>
    <string name="text_view_victory">Vitorias:</string>
    <string name="text_view_defeats">Derrotas:</string>
    <string name="text_view_ties">Empates:</string>
    <string name="text_view_total">Total:</string>
    <string name="text_view_result_victories">0</string>
    <string name="text_view_result_defeats">0</string>
    <string name="text_view_result_ties">0</string>
    <string name="text_view_result_total">0</string>
    <string name="text_view_data">Data</string>
    <string name="text_view_result">Resultado</string>
    <string name="text_view_movements">Jogadas</string>
    <string name="text_view_result_value_date">00/11/22</string>
    <string name="image_result"/>
    <string name="text_result_total_move">0</string>
    <string name="text_result">Resultado</string>
    <string name="text_result_match">da partida</string>
    <string name="describe_table_area">Tabela de jogo</string>
    <string name="describe_select_button_table">Selecione um campo para jogar</string>
    <string name="describe_button_back">Voltar</string>
    <string name="text_button_back">Voltar</string>
    <string name="text_result_table_a"/>
    <string name="text_result_table_b"/>
    <string name="text_result_table_c"/>
    <string name="text_result_table_d"/>
    <string name="text_result_table_e"/>
    <string name="text_result_table_f"/>
    <string name="text_result_table_g"/>
    <string name="text_result_table_h"/>
    <string name="text_result_table_i"/>

    <string name="text_table_a"/>
    <string name="text_table_b"/>
    <string name="text_table_c"/>
    <string name="text_table_d"/>
    <string name="text_table_e"/>
    <string name="text_table_f"/>
    <string name="text_table_g"/>
    <string name="text_table_h"/>
    <string name="text_table_i"/>
    <string name="text_view_in_game">Em Jogo</string>
    <string name="describe_button_cancel">Cancelar partida</string>
    <string name="text_button_cancel_match">Cancelar</string>
    <string name="describe_result_area">Area de resultado</string>
    <string name="describe_emoji_result">Emoji de resultado</string>
    <string name="describe_star_result">Estrela de resultado</string>
    <string name="describe_button_continue_game">Continuar Jogo</string>
    <string name="text_continue">Continuar</string>
    <string name="describe_button_return_to_home">Voltar a Home</string>
    <string name="text_about_title">Jogo da velha</string>
    <string name="text_about_sub_title">O jogo da velha (português brasileiro) ou jogo do galo (português europeu)
        ou três em linha é um jogo e/ou passatempo popular.
    </string>
    <string name="text_about_body">A origem é desconhecida, com indicações de que pode ter começado no antigo Egito,
        onde foram encontrados tabuleiros esculpidos na rocha, que teriam mais de 3.500 anos. De alguma forma,
        é um jogo "aparentado" dos "Merels".
        Algumas lendas urbanas contam que o jogo terá nascido em Portugal, na cidade de Almada no ano 545.\n
        No entanto, só foi popularizado no ano 1500, pelo descobridor Pedro Álvares Cabral, que adorava jogar este jogo
        durante as suas viagens. Álvares Cabral terá decidido que este jogo seria o primeiro a ser ensinado ao
        povo indígena no Brasil.\n\n
        O jogo pode ser jogado sobre um tabuleiro ou mesmo sendo riscado sobre um pedaço de papel ou mesa.
        O menor tabuleiro do mundo foi feito com DNA.\n\n
        Empate (chamado de velha no Brasil, costuma-se dizer que o jogo "deu velha"):
    </string>
    <string name="text_about_footer">
        Fonte de Texto: https://pt.wikipedia.org/wiki/Jogo_da_velha
    </string>
    <string name="describe_button_easy">Fácil</string>
    <string name="text_select_level">Selecione Level</string>
    <string name="text_player_history">"Historico"</string>
    <string name="text_view_level">Level</string>
</resources>