<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange"
        tools:context=".GameResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

        <TextView
                android:text="@string/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                android:fontFamily="@font/rancho"
                android:textSize="@dimen/size_logo"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="350dp"
                android:layout_height="350dp" app:srcCompat="@drawable/table_area" android:id="@+id/imageResultArea"
                app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                android:contentDescription="@string/describe_result_area"/>
        <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp" app:srcCompat="@drawable/ic_emoji_victory"
                android:id="@+id/imageEmojiResult"
                app:layout_constraintTop_toTopOf="@+id/imageResultArea"
                app:layout_constraintEnd_toEndOf="@+id/imageResultArea"
                app:layout_constraintStart_toStartOf="@+id/imageResultArea" android:layout_marginTop="15dp"
                android:contentDescription="@string/describe_emoji_result"/>
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp" app:srcCompat="@drawable/ic_star_victory"
                android:id="@+id/imageStarResult"
                app:layout_constraintTop_toBottomOf="@+id/imageEmojiResult"
                app:layout_constraintEnd_toEndOf="@+id/imageResultArea"
                app:layout_constraintStart_toStartOf="@+id/imageResultArea"
                android:contentDescription="@string/describe_star_result"
                app:layout_constraintBottom_toBottomOf="@+id/imageResultArea"/>
        <ImageButton
                android:layout_width="259dp"
                android:layout_height="79dp" app:srcCompat="@drawable/corners_button"
                android:id="@+id/buttonContinueGame"
                app:layout_constraintTop_toBottomOf="@+id/imageResultArea" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/describe_button_continue_game" android:layout_marginTop="10dp"
                android:padding="0dp"/>
        <TextView
                android:text="@string/text_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textButtonContinueGame"
                app:layout_constraintTop_toTopOf="@+id/buttonContinueGame"
                android:fontFamily="@font/rancho"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_buttons"
                app:layout_constraintBottom_toBottomOf="@+id/buttonContinueGame"
                app:layout_constraintEnd_toEndOf="@+id/buttonContinueGame"
                app:layout_constraintStart_toStartOf="@+id/buttonContinueGame"/>
        <ImageButton
                android:layout_width="259dp"
                android:layout_height="79dp" app:srcCompat="@drawable/corners_button"
                android:id="@+id/buttonExitToHome"
                app:layout_constraintTop_toBottomOf="@+id/buttonContinueGame"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp" android:padding="0dp"
                android:contentDescription="@string/describe_button_return_to_home"/>
        <TextView
                android:text="@string/text_view_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textButtonExitToHome"
                android:fontFamily="@font/rancho"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_buttons"
                app:layout_constraintTop_toTopOf="@+id/buttonExitToHome"
                app:layout_constraintBottom_toBottomOf="@+id/buttonExitToHome"
                app:layout_constraintEnd_toEndOf="@+id/buttonExitToHome"
                app:layout_constraintStart_toStartOf="@+id/buttonExitToHome"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>