<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.jacksonsr45.tictoctoe.userinterface.fragments.SelectLevelFragment"
             android:background="@color/light_orange"
             android:id="@+id/fragmentSelectLevel">

        <ImageButton
                app:srcCompat="@drawable/ic_base_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonLevelEasy"
                android:padding="0dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp" android:contentDescription="@string/describe_level_easy"/>
        <TextView
                android:text="@string/text_level_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:fontFamily="@font/rancho"
                android:textSize="@dimen/size_text_buttons"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@+id/buttonLevelEasy"
                app:layout_constraintEnd_toEndOf="@+id/buttonLevelEasy"
                app:layout_constraintStart_toStartOf="@+id/buttonLevelEasy"
                app:layout_constraintBottom_toBottomOf="@+id/buttonLevelEasy"/>
        <ImageButton
                app:srcCompat="@drawable/ic_base_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonLevelMedium"
                android:padding="0dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonLevelEasy" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                android:contentDescription="@string/describe_button_medium"/>
        <TextView
                android:text="@string/text_view_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:fontFamily="@font/rancho"
                android:textSize="@dimen/size_text_buttons"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/buttonLevelEasy"
                app:layout_constraintBottom_toBottomOf="@+id/buttonLevelMedium"
                app:layout_constraintEnd_toEndOf="@+id/buttonLevelMedium"
                app:layout_constraintStart_toStartOf="@+id/buttonLevelMedium"/>
        <ImageButton
                app:srcCompat="@drawable/ic_base_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonLevelHard"
                android:padding="0dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonLevelMedium" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                android:contentDescription="@string/describe_level_hard"/>
        <TextView
                android:text="@string/text_view_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:fontFamily="@font/rancho"
                android:textSize="@dimen/size_text_buttons"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/buttonLevelMedium"
                app:layout_constraintBottom_toBottomOf="@+id/buttonLevelHard"
                app:layout_constraintEnd_toEndOf="@+id/buttonLevelHard"
                app:layout_constraintStart_toStartOf="@+id/buttonLevelHard"/>
        <ImageButton
                app:srcCompat="@drawable/ic_base_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonExitGame"
                android:padding="0dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonLevelHard" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                android:contentDescription="@string/describe_button_exit"/>
        <TextView
                android:text="@string/text_view_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:fontFamily="@font/rancho"
                android:textSize="@dimen/size_text_buttons"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/buttonLevelHard"
                app:layout_constraintBottom_toBottomOf="@+id/buttonExitGame"
                app:layout_constraintEnd_toEndOf="@+id/buttonExitGame"
                app:layout_constraintStart_toStartOf="@+id/buttonExitGame"/>
</androidx.constraintlayout.widget.ConstraintLayout>