<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange"
        tools:context="com.jacksonsr45.tictoctoe.userinterface.activity.AddPlayerActivity">

    <TextView
            android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:fontFamily="@font/rancho"
            android:textColor="@color/black"
            android:textSize="@dimen/size_logo"
            android:layout_height="wrap_content" android:id="@+id/addPlayerImageLogo"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/input_text_player_name"
            android:inputType="textPersonName"
            android:background="@drawable/corners_fields"
            android:fontFamily="@font/rancho"
            android:textColor="@color/black"
            android:textSize="@dimen/size_input_text"
            android:padding="@dimen/padding_input_text"
            android:ems="10"
            android:id="@+id/textPlayerName"
            app:layout_constraintTop_toBottomOf="@+id/addPlayerImageLogo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" android:autofillHints=""/>
    <ImageButton
            app:srcCompat="@drawable/ic_base_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonAddNewPlayer"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textPlayerName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
            android:contentDescription="@string/describe_button_add_new_player"/>
    <TextView
            android:text="@string/text_button_add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textButtonAddPlayer"
            android:fontFamily="@font/rancho"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_buttons"
            app:layout_constraintTop_toTopOf="@+id/buttonAddNewPlayer"
            app:layout_constraintBottom_toBottomOf="@+id/buttonAddNewPlayer"
            app:layout_constraintEnd_toEndOf="@+id/buttonAddNewPlayer"
            app:layout_constraintStart_toStartOf="@+id/buttonAddNewPlayer"/>
    <ImageButton
            app:srcCompat="@drawable/ic_base_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonAboutPage"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddNewPlayer" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            android:contentDescription="@string/describe_button_about"/>
    <TextView
            android:text="@string/text_button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textButtonAbout"
            android:fontFamily="@font/rancho"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_buttons"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddNewPlayer"
            app:layout_constraintBottom_toBottomOf="@+id/buttonAboutPage"
            app:layout_constraintEnd_toEndOf="@+id/buttonAboutPage"
            app:layout_constraintStart_toStartOf="@+id/buttonAboutPage"/>
</androidx.constraintlayout.widget.ConstraintLayout>