<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:text="@string/text_view_result_value_date"
            android:layout_width="0dp"
            android:layout_height="30dp" android:id="@+id/textViewResultDate"
            android:background="@drawable/table_result_background"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:paddingLeft="13dp" android:paddingRight="13dp" android:gravity="center"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp" app:srcCompat="@drawable/ic_star_min_result_defeat"
            android:background="@drawable/table_result_background"
            android:id="@+id/imageMinResult"
            app:layout_constraintStart_toEndOf="@+id/textViewResultDate" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_result" android:paddingLeft="63dp" android:paddingRight="63dp"/>
    <TextView
            android:text="@string/text_result_total_move"
            android:layout_width="0dp"
            android:background="@drawable/table_result_background"
            android:layout_height="30dp" android:id="@+id/textViewResultTotalMove"
            app:layout_constraintStart_toEndOf="@+id/imageMinResult" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>