<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange"
        tools:context=".AboutActivity" android:id="@+id/layoutAbout">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/corners_button_return"
            android:id="@+id/buttonAboutReturnToHome"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:padding="0dp" android:layout_marginTop="10dp" android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" android:contentDescription="@string/describe_button_return_to_home"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/ic_image_logo" android:id="@+id/imageAboutLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_logo_description"
            app:layout_constraintTop_toBottomOf="@+id/buttonAboutReturnToHome" android:layout_marginTop="10dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp" app:layout_constraintTop_toBottomOf="@+id/imageAboutLogo"
            android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" android:layout_marginRight="10dp" android:layout_marginEnd="10dp"
            android:id="@+id/srollTextAbout">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
        >
            <TextView
                    android:text="@string/text_about_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textDesriptioTitle"
                    android:fontFamily="@font/rancho"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_header_text_about"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" android:layout_marginEnd="10dp" android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" android:gravity="center"/>
            <TextView
                    android:text="@string/text_about_sub_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textDescriptionSubTitle"
                    android:fontFamily="@font/rancho"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_sub_header_text_about"
                    app:layout_constraintTop_toBottomOf="@+id/textDesriptioTitle"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp" android:layout_marginStart="10dp"/>
            <TextView
                    android:text="@string/text_about_body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textAboutTicTocToe"
                    android:fontFamily="@font/rancho"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body_text_about"
                    app:layout_constraintTop_toBottomOf="@+id/textDescriptionSubTitle"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginRight="10dp" android:layout_marginEnd="10dp" android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" android:layout_marginTop="20dp"/>
            <TextView
                    android:text="@string/text_about_footer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textAboutDescriptionFooter"
                    app:layout_constraintTop_toBottomOf="@+id/textAboutTicTocToe"
                    android:fontFamily="@font/rancho"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_footer_text_about"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" android:layout_marginTop="20dp" android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
            android:text="@string/text_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textAboutCopyright"
            android:fontFamily="@font/roboto_black"
            android:textSize="@dimen/size_copyright"
            android:textColor="@color/light_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>