<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange"
        tools:context="com.jacksonsr45.tictoctoe.userinterface.activity.SelectPlayerActivity"
        android:id="@+id/selectPlayerLayout">

    <TextView
            android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:fontFamily="@font/rancho"
            android:textColor="@color/black"
            android:textSize="@dimen/size_logo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/beige"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp" android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_players"
            android:id="@+id/listPlayers"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_base_button" android:id="@+id/buttonCancelSelectPlayer"
            app:layout_constraintTop_toBottomOf="@+id/listPlayers" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:padding="0dp" android:layout_marginTop="10dp"
            android:contentDescription="@string/describe_cancel_select_player"/>
    <TextView
            android:text="@string/text_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textButtonCancel"
            android:fontFamily="@font/rancho"
            android:textSize="@dimen/size_text_buttons"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@+id/buttonCancelSelectPlayer"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCancelSelectPlayer"
            app:layout_constraintEnd_toEndOf="@+id/buttonCancelSelectPlayer"
            app:layout_constraintStart_toStartOf="@+id/buttonCancelSelectPlayer"/>
</androidx.constraintlayout.widget.ConstraintLayout>